landingpage/style.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
}

body > div, .header, .footer {
    padding: 0 15vw;
}

.header, .landing, .nav-links, .card-section, .card-list, .card, .quote, .cta, .footer {
    display: flex;
}

.header, .landing {
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    color: #F9FAF8;
}

.header-logo {
    font-size: 24px;
    font-weight: 900;
}

.nav-links {
    justify-content: space-around;
    list-style-type: none;
    gap: 16px;
}

.links {
    text-decoration: none;
    color: #E5E7EB;
}

.landing {
    padding-top: 16px;
    padding-bottom: 16px;
}

.landing-text, .landing-image {
    flex: 1;
}

.landing-image > img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.landing-text > h1 {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    margin: 0;
}

.landing-text > p {
    font-size: 18px;
    color: #E5E7EB;
    margin: 0 0 8px 0;
}

button {
    font-size: 18px;
    color: #E5E7EB;
    font-weight: 600;
    padding: 6px 30px;
    border-radius: 8px;
    background-color: #3882F6;
}

.landing-text > button {
    border: 0;
}

.card-section {
    flex-direction: column;
    align-items: center;
    padding: 1vw 20vw 5vw;
}

.card-section > h3 {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.card-list {
    display: flex;
    justify-content: center;
    gap: 46px;
}

.card {
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.card > img {
    flex: 1;
    width: 100%;
    height: 100%;
    aspect-ratio: 1 / 1;
    border: 3px solid #3882F6;
    border-radius: 12px;
    margin-bottom: 0;
}

.card > p {
    margin-top: 0;
    color: #1F2937;
}

.quote {
    background-color: #E5E7EB;
    padding-top: 5vw;
    padding-bottom: 5vw;
    flex-direction: column;
}

.quote-body, .quote-tribute {
    padding-right: 6vw;
    padding-left: 6vw;
}

.quote-body {
    font-weight: lighter;
    font-style: italic;
    font-size: 36px;
    color: #1F2937;
    margin-bottom: 0;
    padding-bottom: 0;
}

.quote-tribute {
    align-self: flex-end;
    font-weight: 700;
    font-size: 24px;
    margin-top: 1vw;
    margin-right: 5vw;
}

.cta {
    background-color: #3882F6;
    justify-content: space-between;
    margin: 8vw 15vw;
    padding: 3vw 8vw;
    border-radius: 8px;
    align-items: center;
}

.cta > div > h5, .cta > div > p {
    color: #F9FAF8;
    margin-top: 0;
    margin-bottom: 0;
}

.cta > div > h5 {
    font-size: 24px;
}

.cta > div > p {
    font-size: 18px;
    font-weight: lighter;
}

.cta > button {
    border-color: #E5E7EB;
    border-style: solid;
}

.footer {
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    font-size: 18px;
    color: #E5E7EB;
    padding-top: 16px;
    padding-bottom: 16px;
}

